# cmake-examples-vcpkg

./: .clang-format  CMakeLists.txt  hello_executable.cpp  vcpkg.json
vcpkg-ports/anacortes/: AnacortesConfig.cmake  CMakeLists.txt  anacortes.cpp  anacortes.h  portfile.cmake  vcpkg.json
